--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ h6 {
   background: #fff;
   transition: all 0.5s;
   z-index: 997;
-  padding: -5px 0;
+  padding: 15px 0;
 }
 
 #header.header-scrolled {
@@ -97,6 +97,12 @@ h6 {
   /* height: 820px;
   width: 1200px; */
   max-height: 100px;
+}
+
+@media (max-width: 360px) {
+  #header .logo {
+    width: 10px;
+  }
 }
 
 @media (max-width: 991px) {
@@ -450,7 +456,7 @@ h6 {
   }
 
   #hero h2 {
-    font-size: 18px;
+    font-size: 17px;
     line-height: 24px;
     margin-bottom: 30px;
   }
@@ -595,6 +601,7 @@ section {
   font-size: 14px;
 }
 
+
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
@@ -674,6 +681,7 @@ section {
 .services .icon-box:hover h4 a {
   color: #16df7e;
 }
+
 
 /*--------------------------------------------------------------
 # Portfolio
@@ -944,58 +952,6 @@ section {
 .cta .cta-btn:hover {
   background: #206bfb;
   border-color: #206bfb;
-}
-
-/*--------------------------------------------------------------
-# Team
---------------------------------------------------------------*/
-.team .member {
-  text-align: center;
-  margin-bottom: 20px;
-  padding: 30px 20px;
-  background: #fff;
-}
-
-.team .member img {
-  max-width: 100%;
-  margin: 0 0 30px 0;
-}
-
-.team .member h4 {
-  font-weight: 700;
-  margin-bottom: 2px;
-  font-size: 18px;
-}
-
-.team .member span {
-  font-style: italic;
-  display: block;
-  font-size: 13px;
-}
-
-.team .member p {
-  padding-top: 10px;
-  font-size: 14px;
-  font-style: italic;
-  color: #aaaaaa;
-}
-
-.team .member .social {
-  margin-top: 15px;
-}
-
-.team .member .social a {
-  color: #919191;
-  transition: 0.3s;
-}
-
-.team .member .social a:hover {
-  color: #16df7e;
-}
-
-.team .member .social i {
-  font-size: 18px;
-  margin: 0 2px;
 }
 
 /*--------------------------------------------------------------
